# simple-cheri-benchmarks

./: CMakeLists.txt  benchmark_qsort.sh  compare_long.c  malloc_bench.c  malloc_benchmark.sh.in  qsort.c  run_cheribsd.sh  run_cheribsd.sh.in  run_jenkins-bluehive.sh  run_jenkins_bluehive.sh  run_perf.sh  simple_benchmarks_common.h  test_qsort.c
